--- a/Task Manager/Views/Ticket/ViewTicket.cshtml
+++ b/Task Manager/Views/Ticket/ViewTicket.cshtml
@@ -43,16 +43,15 @@
                                 <th>Description</th>
                                 <th>Branch Code</th>
                                 <th>Assigned To</th>
-                                <th>Created By</th>
-                                <th>Start Date</th>
-                                <th>End Date</th>
+                                <th>Created By</th>    
+                                <th>Last Updated</th>                            
                                 <th>SMS</th>
-                                <th>Email</th>
+                                <th>Email</th>                                
                                 <th>Status</th>
                                 <th>Actions</th>
                             </tr>
                         </thead>
-                        <tbody id="dynamic-Grid"></tbody>
+                       
                     </table>
                     <!-- /.table-responsive -->
                 </div>
@@ -91,7 +90,11 @@
                 console.log(data);
                 filltable(data);
             },
-            error: function () { alert('Grid Not Load'); }
+            error: function () {
+
+                alert('Grid Not Load');
+
+            }
         });
     });
     function DeleteTask(id, rId) {
@@ -166,8 +169,7 @@
                 { "mDataProp": "bran_Code" },
                 { "mDataProp": "users" },
                 { "mDataProp": "createdBy" },
-                { "mDataProp": ".startDate" },
-                { "mDataProp": "endDate" },
+                { "mDataProp": "lastModify" },
                 { "mDataProp": "sms" },
                 { "mDataProp": "email" },
                 { "mDataProp": "status" },
