--- a/Task Manager/Views/Ticket/ViewTicket.cshtml
+++ b/Task Manager/Views/Ticket/ViewTicket.cshtml
@@ -33,7 +33,7 @@
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
-                    <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                    <table class="table table-striped table-bordered table-hover" id="dataTables-exampletick">
                         <thead>
                             <tr>
                                 <th>Ticket Number</th>
@@ -156,7 +156,7 @@
     }
     function filltable(datas) {
 
-        $("#dataTables-example").DataTable({
+        $("#dataTables-exampletick").DataTable({
             "aaData": datas,
             "bAutoWidth": false,
             "sPaginationType": "full_numbers",
