--- a/Task Manager/Views/Project/ProjectFileUpload.cshtml
+++ b/Task Manager/Views/Project/ProjectFileUpload.cshtml
@@ -14,14 +14,31 @@
     <div class="container">
 
         <ul class="tabs">
-            <li class="tab-link current" data-tab="tab-1">Task</li>
-            <li class="tab-link" data-tab="tab-2">Files</li>
-            @*<li class="tab-link" data-tab="tab-3">Tab Three</li>
-                <li class="tab-link" data-tab="tab-4">Tab Four</li>*@
+            <li class="tab-link current" data-tab="tab-1" onclick="call(0)">Team</li>
+            <li class="tab-link " data-tab="tab-2" onclick="call(1)">Task</li>
+            <li class="tab-link" data-tab="tab-3" onclick="call(2)">Files</li>
         </ul>
-
         <div id="tab-1" class="tab-content current">
-            <table class=" table table-bordered">
+
+            @************************************* Team ********************************************@
+            <table class="table table-striped table-bordered table-hover" id="dataTables-exampl" style="width:100%!important">
+                <thead>
+                    <tr>
+                        <th>as</th>
+                        <th>Customer Name</th>
+                        <th>Address</th>
+                        <th>OnBoard Date</th>
+
+                    </tr>
+                </thead>
+                <tbody id="dynamic-Grid"></tbody>
+            </table>
+
+
+        </div>
+        @************************************* Task ********************************************@
+        <div id="tab-2" class="tab-content ">
+            <table class="table table-striped table-bordered table-hover" id="dataTables-examp" style="width:100%!important">
                 <thead id="th">
                     <tr>
                         <th>Id</th>
@@ -30,19 +47,13 @@
                         <th>End Date</th>
                     </tr>
                 </thead>
-                <tbody id="dynamic-Grid">
-                    <tr>
-                        <td>1</td>
-                        <td>Anna</td>
-                        <td>Anna</td>
-                        <td>Anna</td>
-                    </tr>
-                </tbody>
+                <tbody id="dynamic-Grid"></tbody>
             </table>
         </div>
-        <div id="tab-2" class="tab-content">
+        @************************************* File ********************************************@
+        <div id="tab-3" class="tab-content">
             <div>
-                <table class=" table table-bordered">
+                <table class="table table-striped table-bordered table-hover" id="dataTables-exam" style="width:100%!important">
                     <thead id="th">
                         <tr>
                             <th>File Name</th>
@@ -51,29 +62,13 @@
                             <th>Download</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td>Internak Work Order</td>
-                            <td>docx</td>
-                            <td>Hammad</td>
-                            <td>Download</td>
-                        </tr>
-                    </tbody>
+                    <tbody id="dynamic-Grid"></tbody>
                 </table>
             </div>
             <div id="uplodbtn">
                 <button type="button" class="btn_login" data-toggle="modal" data-target="#myModal" id="btn">Upload File</button>
             </div>
-
         </div>
-
-        @*<div id="tab-3" class="tab-content">
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            </div>
-            <div id="tab-4" class="tab-content">
-                Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </div>*@
-
     </div><!-- container -->
 </div>
 <div id="myModal" class="modal fade" role="dialog">
@@ -117,7 +112,7 @@
                                     </div>
                                     <div class="col-lg-6">
                                         <div>
-                                            <input id="myfile" name="myFile" type="file" />
+                                            <input name="myFile" type="file" id="images" />
                                         </div>
                                     </div>
                                 </div>
@@ -135,9 +130,6 @@
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
-            @*<div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>*@
         </div>
 
     </div>
@@ -155,20 +147,127 @@
             $(this).addClass('current');
             $("#" + tab_id).addClass('current');
         })
+
+        call(0);
+    });
+
+    function call(id) {
         $.ajax({
             async: false,
-            url: '/api/ProjectFilesUpload/',
+            url: '/api/ProjectFilesUpload/' + id,
             type: 'GET',
             success: function (data) {
                 console.log(data);
-                for (var i = 0; i < data.tasktab.length; i++) {
-                    console.log(data.tasktab[i].task_No);
-                    $("#dynamic-Grid").append("<tr><td>" + data.tasktab[i].task_No + "</td><td>" + data.tasktab[i].task_Name + "</td><td>" + data.tasktab[i].start_Date.substring(0, 10) + "</td><td>" + data.tasktab[i].end_Date.substring(0, 10) + "</td></tr>");
+                if (id == 0) {
+                  table =  $("#dataTables-exampl").DataTable({
+                      "aaData": data,
+                      "bDestroy": true,
+                        "aoColumns": [
+                            { "mDataProp": "Name" },
+                            { "mDataProp": "Number" },
+                            { "mDataProp": "Address" }
+                        ]
+                    });
+                }
+                else if (id == 1) {
+                    $("#dataTables-examp").DataTable({
+                        "aaData": data,
+                        "bDestroy": true,
+                        "aoColumns": [
+                            { "mDataProp": "task_No" },
+                            { "mDataProp": "task_Name" },
+                            { "mDataProp": "start_Date" },
+                            { "mDataProp": "end_Date" }
+                        ]
+                    });
+
+                }
+                else {
+                    $("#dataTables-exam").DataTable({
+                        "aaData": data,
+                        "bDestroy": true,
+                        "aoColumns": [
+                            { "mDataProp": "file_Name" },
+                            { "mDataProp": "file_Type" },
+                            { "mDataProp": "uploaded_date" },
+                            { "mDataProp": "fileCode" }
+                        ]
+                    });
+
                 }
             },
             error: function () {
                 alert('User not Updated');
             }
         });
-    })
+
+    }
+    $('#images').on('change', function (e) {
+        var files = e.target.files;
+        //var myID = 3; //uncomment this to make sure the ajax URL works
+        if (files.length > 0) {
+            if (window.FormData !== undefined) {
+                ImageData = new FormData();
+                for (var x = 0; x < files.length; x++) {
+                    ImageData.append("file" + x, files[x]);
+                }
+            }
+        }
+    });
+
+    function Add() {
+        var dropdowntype = document.getElementById("FileCatogreyDropdown").value.trim();
+        var file = document.getElementById("images").value;
+        if (dropdowntype == "00") {
+            alert("Please Select Any File Name");
+        }
+        else if (file == null) {
+            alert("Please Select Any File")
+        }
+        else {
+            var model = { fileName: file, fileCode: dropdowntype };
+            console.log(file + "" + dropdowntype);
+            $.ajax({
+                async: false,
+                url: '/api/ProjectFilesUpload/',
+                type: 'POST',
+                data: JSON.stringify(model),
+                contentType: "application/json;charset=utf-8",
+                dataType: "json",
+                success: function (data) {
+                    alert(data);
+
+                    //
+                    $.ajax({
+                        type: "POST",
+                        url: '/api/UploadFileApi/',
+                        contentType: false,
+                        processData: false,
+                        data: ImageData,
+                        success: function (result) {
+                            alert("success message");
+                        },
+                        error: function (xhr, status, p3, p4) {
+                            var err = "Error " + " " + status + " " + p3 + " " + p4;
+                            if (xhr.responseText && xhr.responseText[0] == "{")
+                                err = JSON.parse(xhr.responseText).Message;
+                            console.log(err);
+                        }
+                    });
+
+                    //
+                },
+                error: function () {
+                    alert("File Not Saved");
+                }
+            });
+        }
+    }
+
+
+
+
+
+
+
 </script>
