--- a/Task Manager/Views/Project/ProjectFileUpload.cshtml
+++ b/Task Manager/Views/Project/ProjectFileUpload.cshtml
@@ -52,21 +52,20 @@
         </div>
         @************************************* File ********************************************@
         <div id="tab-3" class="tab-content overflow">
-            <div >
+            <div>
                 <table class="table table-striped table-bordered table-hover" id="dataTables-exam" style="width:100%!important;">
                     <thead id="th">
                         <tr>
                             <th>File Code</th>
                             <th>Type</th>
                             <th>Upload Date</th>
-                            <th>Upload Time</th>
                             <th>Download</th>
                         </tr>
                     </thead>
                     <tbody id="dynamic-Grid"></tbody>
                 </table>
             </div>
-           
+
         </div>
         <div id="uplodbtn">
             <button type="button" class="btn_login" data-toggle="modal" data-target="#myModal" id="btn">Upload File</button>
@@ -79,7 +78,7 @@
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <button type="button"  id="closeModal" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title center"> File Upload</h4>
             </div>
             <div class="row">
@@ -161,9 +160,9 @@
             success: function (data) {
                 console.log(data);
                 if (id == 0) {
-                  table =  $("#dataTables-exampl").DataTable({
-                      "aaData": data,
-                      "bDestroy": true,
+                    table = $("#dataTables-exampl").DataTable({
+                        "aaData": data,
+                        "bDestroy": true,
                         "aoColumns": [
                             { "mDataProp": "Name" },
                             { "mDataProp": "Number" },
@@ -192,7 +191,6 @@
                             { "mDataProp": "fileCode" },
                             { "mDataProp": "file_Type" },
                             { "mDataProp": "uploaded_date" },
-                            { "mDataProp": "upload_time" },
                             { "mDataProp": "file_Name" }
                         ]
                     });
@@ -200,7 +198,7 @@
                 }
             },
             error: function () {
-                alert('User not Updated');
+                alert('Detail Updated');
             }
         });
 
@@ -238,14 +236,15 @@
                 contentType: "application/json;charset=utf-8",
                 dataType: "json",
                 success: function (data) {
-                    $.ajax({                       
+                    $.ajax({
                         url: '/api/UploadFileApi/',
                         type: "POST",
                         contentType: false,
                         processData: false,
                         data: ImageData,
                         success: function (result) {
-                            alert("File Uploaded Successfully");
+                            document.getElementById("closeModal").click();
+                            call(2);
                         },
                         error: function (xhr, status, p3, p4) {
                             var err = "Error " + " " + status + " " + p3 + " " + p4;
