--- a/Task Manager/Views/Requisition/ViewRequisition.cshtml
+++ b/Task Manager/Views/Requisition/ViewRequisition.cshtml
@@ -51,6 +51,7 @@
                     <table class="table table-striped table-bordered table-hover" id="dataTables-exampl" style="width: 100%!important">
                         <thead>
                             <tr>
+                                <th>Serial No</th>
                                 <th>Customer Name</th>
                                 <th>Project Name</th>
                                 <th>Item Name</th>
@@ -63,8 +64,8 @@
                                 <th>Created By</th>
                                 <th>Approved By</th>
                                 <th>Approved Date</th>
-                                <th>Approved By</th>
-                                <th>Approved Date</th>
+                                <th>Issued By</th>
+                                <th>Issued Date</th>
                                 <th>Actions</th>
                             </tr>
                         </thead>
@@ -90,27 +91,17 @@
             contentType: "application/json;charset=utf-8",
             dataType: "json",
             success: function (data) {
-                console.log(data);
                 filltable(data);
-                console.log("hi");
             },
             error: function () { alert('Requisition grid not working'); }
         });
     });
-    //function filltable(datas) {
-    //    $("#dataTables-exampl").DataTable({
-    //        "aaData": datas,
-    //        "aoColumns": [
-    //
-    //    });
-
-    //}
-
     function filltable(datas) {
         $("#dataTables-exampl").DataTable({
             "pageLength": 25,
             "aaData": datas,
             "aoColumns": [
+                { "mDataProp": "serialNo" },
                 { "mDataProp": "customerName" },
                 { "mDataProp": "projectName" },
                 { "mDataProp": "itemName" },
@@ -121,12 +112,27 @@
                 { "mDataProp": "issuedQuantity" },
                 { "mDataProp": "createdDate" },
                 { "mDataProp": "createdBy" },
+                { "mDataProp": "approvedBy" },
                 { "mDataProp": "approvedDate" },
+                { "mDataProp": "issuedBy" },
                 { "mDataProp": "issuedDate" },
-                { "mDataProp": "issuedTo" },
+                { "mDataProp": "action" }
             ]
         });
     }
-
+    function deleteRequisition(id) {
+        $.ajax({
+            async: false,
+            url: '/api/RequisitionApi/' + id,
+            type: 'DELETE',
+            contentType: "application/json;charset=utf-8",
+            dataType: "json",
+            success: function (data) {
+                alert('Requisition Deleted');
+                location.reload();
+            },
+            error: function () { alert('Requisition Not Deleted'); }
+        });
+    }
 
 </script>
